--- a/swahili/styles.css
+++ b/swahili/styles.css
@@ -4,20 +4,20 @@
     padding: 0;
     box-sizing: border-box;
     
-}
-
-html{
+  }
+  
+  html{
     font-size: 85%;
-}
-
-body {
+  }
+  
+  body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: white;
-}
-
-/* Adjust logo and search bar */
-header {
+  }
+  
+  /* Adjust logo and search bar */
+  header {
     background-color: #dad7d7;
     color: #fff;
     text-align: center;
@@ -25,50 +25,50 @@ header {
     display: flex;
     justify-content: space-between; /* Adjusts alignment */
     align-items: center; /* Vertically center items */
-}
-
-/* Logo styles */
-.logo {
+  }
+  
+  /* Logo styles */
+  .logo {
     animation: logoFadeIn 1s ease-out forwards; /* Animation definition */
     align-items: inherit;
-}
-
-.logo img {
+  }
+  
+  .logo img {
     width: 100px; /* Adjust width as needed */
     height: 110px; /* Adjust height as needed */
     align-content: center;
-}
-
-.search-bar {
+  }
+  
+  .search-bar {
     margin-right: 20px; /* Adjust margin for search bar position */
     flex: 1; /* Allows the search bar to expand and take up remaining space */
     display: flex;
     justify-content: center; /* Align items horizontally at the center */
     align-items: center; /* Align items vertically at the center */
     margin-top: 20px;
-}
-
-.search-bar input[type="text"],
-.search-bar button {
+  }
+  
+  .search-bar input[type="text"],
+  .search-bar button {
     padding: 8px;
     font-size: 14px;
     border: 1px solid #ccc;
     border-radius: 10px;
     margin-right: 5px;
-}
-
-.search-bar button {
+  }
+  
+  .search-bar button {
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
-}
-
-.search-bar button:hover {
+  }
+  
+  .search-bar button:hover {
     background-color: #0056b3;
-}
-
-@keyframes logoFadeIn {
+  }
+  
+  @keyframes logoFadeIn {
     from {
         opacity: 0;
         transform: translateY(-20px); /* Optional: Move from top */
@@ -77,84 +77,84 @@ header {
         opacity: 1;
         transform: translateY(0);
     }
-}
-
-
-h1 {
+  }
+  
+  
+  h1 {
     font-size: 24px;
     text-align: center;
     color: rgb(47, 102, 150);
-}
-
-h2{
+  }
+  
+  h2{
     
     color: #484949;
-}
-
-.main-container {
+  }
+  
+  .main-container {
     display: flex;
     max-width: 1200px;
     margin: 20px auto;
     width: 80%;
-}
-
-img {
+  }
+  
+  img {
     float: left;
     
   }
-
-.sidebar {
+  
+  .sidebar {
     width: 25%;
     background-color: #cac8c8;
     padding: 20px;
-}
-
-.sidebar ul {
+  }
+  
+  .sidebar ul {
     list-style-type: none;
     padding: 0;
-}
-
-.sidebar ul li {
+  }
+  
+  .sidebar ul li {
     margin-bottom: 10px;
-}
-
-.sidebar ul li a {
+  }
+  
+  .sidebar ul li a {
     color: #333;
     text-decoration: none;
     display: block;
     padding: 8px 12px;
     border-radius: 4px;
-}
-
-.sidebar ul li a:hover {
+  }
+  
+  .sidebar ul li a:hover {
     background-color: #ddd;
-}
-
-.content-area {
+  }
+  
+  .content-area {
     width: 75%;
     background-color: #fff;
     padding: 20px;
-}
-
-.header-image {
+  }
+  
+  .header-image {
     max-width: 100%;
-}
-
-/* Slideshow container */
-.slideshow-container {
+  }
+  
+  /* Slideshow container */
+  .slideshow-container {
     position: relative;
     max-width: 100%;
     margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
     display: none;
-}
-
-/* Next and previous buttons */
-
-.prev, .next {
+  }
+  
+  /* Next and previous buttons */
+  
+  .prev, .next {
     cursor: pointer;
     position: relative;
     top: 60%;
@@ -166,104 +166,349 @@ img {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
-}
-
-
-/* Position the "next button" to the right */
-.next {
+  }
+  
+  
+  /* Position the "next button" to the right */
+  .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Fading animation */
-.fade {
+  }
+  
+  /* Fading animation */
+  .fade {
     animation-name: fade;
     animation-duration: 1.5s;
-}
-
-@keyframes fade {
+  }
+  
+  @keyframes fade {
     from { opacity: .4 }
     to { opacity: 1 }
-}
-
-@media (max-width: 768px) {
+  }
+  
+  @media (max-width: 768px) {
     .main-container {
         flex-direction: column;
     }
     .sidebar, .content-area {
         width: 100%;
     }
-}
-
-
-
-/* Style for the dropdown menu */
-.dropdown-menu {
+  }
+  
+  
+  
+  /* Style for the dropdown menu */
+  .dropdown-menu {
     display: none;
     list-style-type: none;
     padding: 0;
     margin: 0;
     background-color: #cac8c8;
     position: relative;
-}
-
-.dropdown-menu li {
+  }
+  
+  .dropdown-menu li {
     margin-bottom: 10px;
-}
-
-.dropdown-menu li a {
+  }
+  
+  .dropdown-menu li a {
     color: #333;
     text-decoration: none;
     display: block;
     padding: 8px 12px;
     border-radius: 4px;
-}
-
-.dropdown-menu li a:hover {
+  }
+  
+  .dropdown-menu li a:hover {
     background-color: #ddd;
-}
-
-/* Show dropdown menu when parent has 'show' class */
-.show .dropdown-menu {
+  }
+  
+  /* Show dropdown menu when parent has 'show' class */
+  .show .dropdown-menu {
     display: block;
-}
-
-.language-switch {
+  }
+  
+  .language-switch {
     text-align: right;
     padding: 10px;
-}
-
-.language-switch button {
+  }
+  
+  .language-switch button {
     margin: 0 10px;
     padding: 5px 10px;
     cursor: pointer;
-}
-
-.container-judges{
+  }
+  
+  .container-judges{
     display: flex;
     align-items: flex-start;
-}
-
-.left-img{
+  }
+  
+  .left-img{
     float: left;
     margin-right: 20px;
     
-}
-
-@media (max-width:768px){
+  }
+  
+  @media (max-width:768px){
     .container-judges{
         display: block;
     }
-
+  
     .left-img{
         float: none;
-        margin: 0 auto;
+        margin: 0 auto 20px;
         max-width: 100%;
         display: block;
     }
-}
+  }
+  
+  
+  .clearfix {
+    clear: both;
+  }
+  
+  
+  
+  
+  
+  footer {
+      position: flex;
+      background: #525252;
+      width: 100%;
+      bottom: 0;
+      left: 0;
+      z-index: 10;
+    }
+    
+    /* footer::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 100px;
+      height: 1px;
+      width: 100%;
+      background: #AFAFB6;
+    } */
+    
+    footer .content {
+      max-width: 1250px;
+      margin: auto;
+      padding: 30px 40px 40px 40px;
+    }
+    footer .content .top {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 50px;
+    }
+    .content .top .logo-details {
+      color: #615e5e;
+      font-size: 30px;
+    }
+    .content .top .media-icons {
+      display: flex;
+    }
+    .content .top .media-icons a {
+      height: 40px;
+      width: 40px;
+      margin: 0 8px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 40px;
+      color: #fff;
+      font-size: 17px;
+      text-decoration: none;
+      transition: all 0.4s ease;
+    }
+    .top .media-icons a:nth-child(1) {
+      background: #4267b2;
+    }
+    .top .media-icons a:nth-child(1):hover {
+      color: #4267b2;
+      background: #fff;
+    }
+    .top .media-icons a:nth-child(2) {
+      background: #1da1f2;
+    }
+    .top .media-icons a:nth-child(2):hover {
+      color: #1da1f2;
+      background: #fff;
+    }
+    .top .media-icons a:nth-child(3) {
+      background: #e1306c;
+    }
+    .top .media-icons a:nth-child(3):hover {
+      color: #e1306c;
+      background: #fff;
+    }
+    .top .media-icons a:nth-child(4) {
+      background: #0077b5;
+    }
+    .top .media-icons a:nth-child(4):hover {
+      color: #0077b5;
+      background: #fff;
+    }
+    .top .media-icons a:nth-child(5) {
+      background: #ff0000;
+    }
+    .top .media-icons a:nth-child(5):hover {
+      color: #ff0000;
+      background: #fff;
+    }
+    footer .content .link-boxes {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+    footer .content .link-boxes .box {
+      width: calc(100% / 5 - 10px);
+    }
+    .content .link-boxes .box .link_name {
+      color: #fff;
+      font-size: 18px;
+      font-weight: 400;
+      margin-bottom: 10px;
+      position: relative;
+    }
+    .link-boxes .box .link_name::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -2px;
+      height: 2px;
+      width: 35px;
+      background: #fff;
+    }
+    .content .link-boxes .box li {
+      margin: 6px 0;
+      list-style: none;
+    }
+    .content .link-boxes .box li a {
+      color: #fff;
+      font-size: 14px;
+      font-weight: 400;
+      text-decoration: none;
+      opacity: 0.8;
+      transition: all 0.4s ease;
+    }
+    .content .link-boxes .box li a:hover {
+      opacity: 1;
+      text-decoration: underline;
+    }
+    .content .link-boxes .input-box {
+      margin-right: 55px;
+    }
+    .link-boxes .input-box input {
+      height: 40px;
+      width: calc(100% + 55px);
+      outline: none;
+      border: 2px solid #afafb6;
+      background: #fefeff;
+      border-radius: 4px;
+      padding: 0 15px;
+      font-size: 15px;
+      color: #0e0e0e;
+      margin-top: 5px;
+    }
+    .link-boxes .input-box input::placeholder {
+      color: #afafb6;
+      font-size: 16px;
+    }
+    .link-boxes .input-box input[type='button'] {
+      background: #fff;
+      color: #140b5c;
+      border: none;
+      font-size: 18px;
+      font-weight: 500;
+      margin: 4px 0;
+      opacity: 0.8;
+      cursor: pointer;
+      transition: all 0.4s ease;
+    }
+    .input-box input[type='button']:hover {
+      opacity: 1;
+    }
+    footer .bottom-details {
+      width: 100%;
+      background: #3b3b3b;
+    }
+    footer .bottom-details .bottom_text {
+      max-width: 1250px;
+      margin: auto;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+    }
+    .bottom-details .bottom_text span,
+    .bottom-details .bottom_text a {
+      font-size: 14px;
+      font-weight: 300;
+      color: #fff;
+      opacity: 0.8;
+      text-decoration: none;
+    }
+    .bottom-details .bottom_text a:hover {
+      opacity: 1;
+      text-decoration: underline;
+    }
+    .bottom-details .bottom_text a {
+      margin-right: 10px;
+    }
+    @media (max-width: 900px) {
+      footer .content .link-boxes {
+        flex-wrap: wrap;
+      }
+      footer .content .link-boxes .input-box {
+        width: 40%;
+        margin-top: 10px;
+      }
+    }
+    @media (max-width: 700px) {
+      footer {
+        position: relative;
+      }
+      .content .top .logo-details {
+        font-size: 26px;
+      }
+      .content .top .media-icons a {
+        height: 35px;
+        width: 35px;
+        font-size: 14px;
+        line-height: 35px;
+      }
+      footer .content .link-boxes .box {
+        width: calc(100% / 3 - 10px);
+      }
+      footer .content .link-boxes .input-box {
+        width: 60%;
+      }
+      .bottom-details .bottom_text span,
+      .bottom-details .bottom_text a {
+        font-size: 12px;
+      }
+    }
+    @media (max-width: 520px) {
+      footer::before {
+        top: 145px;
+      }
+      footer .content .top {
+        flex-direction: column;
+      }
+      .content .top .media-icons {
+        margin-top: 16px;
+      }
+      footer .content .link-boxes .box {
+        width: calc(100% / 2 - 10px);
+      }
+      footer .content .link-boxes .input-box {
+        width: 100%;
+      }
+    }
+    
+  
